<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MenuActivity">

    <ImageView
        android:id="@+id/imageView10"
        android:layout_width="323dp"
        android:layout_height="315dp"
        android:layout_marginTop="470dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/fallc" />

    <ImageView
        android:id="@+id/imageView7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="330dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/ftop" />

    <ImageView
        android:id="@+id/imageView8"
        android:layout_width="374dp"
        android:layout_height="446dp"
        android:layout_marginTop="-150dp"
        android:layout_marginBottom="350dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/menu" />

    <LinearLayout
        android:layout_width="415dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="145dp"
        android:layout_marginBottom="198dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <Button
            android:id="@+id/start_game_bttn"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:fontFamily="@font/trickyjimmy"
            android:gravity="center"
            android:text="@string/start_bttn"
            android:textSize="25sp" />

        <Button
            android:id="@+id/leaderboard_bttn"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:fontFamily="@font/trickyjimmy"
            android:gravity="center"
            android:text="@string/leaderboard_bttn"
            android:textSize="25sp" />

        <Button
            android:id="@+id/instructions_bttn"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:fontFamily="@font/trickyjimmy"
            android:gravity="center"
            android:text="@string/instructions_bttn"
            android:textSize="25sp" />

        <Button
            android:id="@+id/settings_bttn"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:fontFamily="@font/trickyjimmy"
            android:gravity="center"
            android:text="@string/settings_bttn"
            android:textSize="25sp" />

        <Button
            android:id="@+id/sound_bttn"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:fontFamily="@font/trickyjimmy"
            android:text="@string/sound_bttn"
            android:textSize="25sp" />

        <Button
            android:id="@+id/feedback_bttn"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:fontFamily="@font/trickyjimmy"
            android:text="@string/feedback_bttn"
            android:textSize="25sp" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>